// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Contact form renders a contact form 1`] = `
<div
  id="contact-info"
>
  <div
    className="ui container"
  >
    <div
      className="ui icon negative attached message"
    >
      <i
        aria-hidden="true"
        className="warning icon"
      />
      <div
        className="content"
      >
        <div
          className="header"
        >
          Error
        </div>
      </div>
    </div>
    <div
      className="ui container"
    >
      <form
        className="ui form"
        method="post"
        onSubmit={[Function]}
      >
        <div
          className="ui raised segments"
        >
          <div
            className="ui segment"
          >
            <div
              className="ui segment primary"
            >
              Contact form
            </div>
            <div
              className="inline field"
            >
              <div
                className="ui grid"
              >
                <div
                  className="stretched row"
                >
                  <div
                    className="four wide column"
                  >
                    <div
                      className="wrapper"
                    >
                      <label
                        htmlFor="field-name"
                      >
                        Name
                      </label>
                    </div>
                  </div>
                  <div
                    className="eight wide column"
                  >
                    <div
                      className="ui input"
                    >
                      <input
                        disabled={false}
                        id="field-name"
                        name="name"
                        onChange={[Function]}
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="inline required field"
            >
              <div
                className="ui grid"
              >
                <div
                  className="stretched row"
                >
                  <div
                    className="four wide column"
                  >
                    <div
                      className="wrapper"
                    >
                      <label
                        htmlFor="field-from"
                      >
                        From
                      </label>
                    </div>
                  </div>
                  <div
                    className="eight wide column"
                  >
                    <div
                      className="ui input"
                    >
                      <input
                        disabled={false}
                        id="field-from"
                        name="from"
                        onChange={[Function]}
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="inline field"
            >
              <div
                className="ui grid"
              >
                <div
                  className="stretched row"
                >
                  <div
                    className="four wide column"
                  >
                    <div
                      className="wrapper"
                    >
                      <label
                        htmlFor="field-subject"
                      >
                        Subject
                      </label>
                    </div>
                  </div>
                  <div
                    className="eight wide column"
                  >
                    <div
                      className="ui input"
                    >
                      <input
                        disabled={false}
                        id="field-subject"
                        name="subject"
                        onChange={[Function]}
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="inline required field textarea"
            >
              <div
                className="ui grid"
              >
                <div
                  className="stretched row"
                >
                  <div
                    className="four wide column"
                  >
                    <div
                      className="wrapper"
                    >
                      <label
                        htmlFor="field-message"
                      >
                        Message
                      </label>
                    </div>
                  </div>
                  <div
                    className="eight wide column"
                  >
                    <textarea
                      disabled={false}
                      id="field-message"
                      name="message"
                      onChange={[Function]}
                      onInput={[Function]}
                      rows={3}
                      style={
                        Object {
                          "resize": "",
                        }
                      }
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="ui clearing segment actions"
          >
            <button
              className="ui big basic circular icon primary right floated button"
              onClick={[Function]}
              role="button"
              title="Send"
              type="submit"
            >
              <i
                aria-hidden="true"
                className="arrow right icon"
              />
            </button>
            <button
              className="ui big basic circular icon secondary right floated button"
              onClick={[Function]}
              role="button"
              title="Cancel"
            >
              <i
                aria-hidden="true"
                className="remove icon"
              />
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Contact form renders a contact form with error message 1`] = `
<div
  id="contact-info"
>
  <div
    className="ui container"
  >
    <div
      className="ui icon negative attached message"
    >
      <i
        aria-hidden="true"
        className="warning icon"
      />
      <div
        className="content"
      >
        <div
          className="header"
        >
          Error
        </div>
        <p>
          Error foo
        </p>
      </div>
    </div>
    <div
      className="ui container"
    >
      <form
        className="ui form"
        method="post"
        onSubmit={[Function]}
      >
        <div
          className="ui raised segments"
        >
          <div
            className="ui segment"
          >
            <div
              className="ui segment primary"
            >
              Contact form
            </div>
            <div
              className="inline field"
            >
              <div
                className="ui grid"
              >
                <div
                  className="stretched row"
                >
                  <div
                    className="four wide column"
                  >
                    <div
                      className="wrapper"
                    >
                      <label
                        htmlFor="field-name"
                      >
                        Name
                      </label>
                    </div>
                  </div>
                  <div
                    className="eight wide column"
                  >
                    <div
                      className="ui input"
                    >
                      <input
                        disabled={false}
                        id="field-name"
                        name="name"
                        onChange={[Function]}
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="inline required field"
            >
              <div
                className="ui grid"
              >
                <div
                  className="stretched row"
                >
                  <div
                    className="four wide column"
                  >
                    <div
                      className="wrapper"
                    >
                      <label
                        htmlFor="field-from"
                      >
                        From
                      </label>
                    </div>
                  </div>
                  <div
                    className="eight wide column"
                  >
                    <div
                      className="ui input"
                    >
                      <input
                        disabled={false}
                        id="field-from"
                        name="from"
                        onChange={[Function]}
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="inline field"
            >
              <div
                className="ui grid"
              >
                <div
                  className="stretched row"
                >
                  <div
                    className="four wide column"
                  >
                    <div
                      className="wrapper"
                    >
                      <label
                        htmlFor="field-subject"
                      >
                        Subject
                      </label>
                    </div>
                  </div>
                  <div
                    className="eight wide column"
                  >
                    <div
                      className="ui input"
                    >
                      <input
                        disabled={false}
                        id="field-subject"
                        name="subject"
                        onChange={[Function]}
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="inline required field textarea"
            >
              <div
                className="ui grid"
              >
                <div
                  className="stretched row"
                >
                  <div
                    className="four wide column"
                  >
                    <div
                      className="wrapper"
                    >
                      <label
                        htmlFor="field-message"
                      >
                        Message
                      </label>
                    </div>
                  </div>
                  <div
                    className="eight wide column"
                  >
                    <textarea
                      disabled={false}
                      id="field-message"
                      name="message"
                      onChange={[Function]}
                      onInput={[Function]}
                      rows={3}
                      style={
                        Object {
                          "resize": "",
                        }
                      }
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="ui clearing segment actions"
          >
            <button
              className="ui big basic circular icon primary right floated button"
              onClick={[Function]}
              role="button"
              title="Send"
              type="submit"
            >
              <i
                aria-hidden="true"
                className="arrow right icon"
              />
            </button>
            <button
              className="ui big basic circular icon secondary right floated button"
              onClick={[Function]}
              role="button"
              title="Cancel"
            >
              <i
                aria-hidden="true"
                className="remove icon"
              />
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;
